# saorsa-transport

./: Cargo.toml
.benchmarks/: results-20260313-230134-ed5dc8dee80897b4bd04596f72c6e1b33aa33a3c.json  results-20260424-180821-bd56771c58930ca2f1b40fbd536d382c80180e6e.json
.github/workflows/: benchmarks.yml  external-validation.yml  fix-gossip.yml  platforms-exotic.yml  prevent-upstream-pr.yml  release.yml  security.yml
benches/: connection_router.rs  nat_traversal.rs  udp_throughput.rs
docs/adr/: ADR-009-masque-relay-data-plane.md
examples/: pqc_verification.rs  simple_p2p.rs
src/: candidate_discovery.rs  congestion.rs  connection_router.rs  connection_strategy.rs  discovery_trait.rs  endpoint.rs  error.rs  frame.rs  handler.rs  lib.rs  link_transport.rs  link_transport_impl.rs  nat_traversal_api.rs  node.rs  node_config.rs  node_event.rs  node_status.rs  p2p_endpoint.rs  reachability.rs  relay_slot_table.rs  shared.rs  stats_dashboard.rs  stream_type.rs  token_v2.rs  transport.rs  unified_config.rs  upnp.rs
src/bootstrap_cache/: cache.rs  entry.rs  persistence.rs  selection.rs  token_store.rs
src/compliance_validator/: endpoint_tester.rs
src/trust/: mod.rs
tests/: ble_transport.rs  comprehensive_p2p_network.rs  config_migration.rs  connection_lifecycle_tests.rs  constrained_integration.rs  discovery.rs  event_migration.rs  external_address_verification.rs  ipv4_ipv6_bridging_tests.rs  live_network_e2e.rs  relay_queue_tests.rs  security_regression_tests.rs  simple_node_api.rs  simultaneous_connect_dedup.rs  transport_adverts.rs  transport_registry_flow.rs
(+51 files in other folders)
